# shepardtone

./: pyproject.toml
src/shepardtone/: __main__.py  adsbdb.py  bot.py  gis.py  opensky.py
tests/: test_adsbdb.py  test_opensky.py
tests/fixtures/: adsbdb_aircraft.json  adsbdb_callsign.json  opensky_switzerland.json
